Melhorando qualidade do código de acordo com o sonarcloud